# glycoMusubi

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
configs/: base.yaml
glyco_kg/: __init__.py
schemas/: edge_schema.yaml  entity_config.yaml  kg_schema.yaml  node_schema.yaml  relation_config.yaml
scripts/: build_kg.py  build_reaction_triplets.py  build_site_position_map.py  celltype_conditioned_glycan_v2.py  celltype_glycan_predictor.py  clean_data.py  compare_baseline_metrics.py  compute_esm2_embeddings.py  compute_perresidue_esm2.py  consolidated_benchmark.py  download_data.py  embedding_pipeline.py  enzyme_pathway_scorer.py  evaluate_inductive.py  fetch_glyconnect_sites.py  fetch_hpa_expression.py  fetch_protein_sequences.py  fetch_tabula_sapiens_glyco.py  glycan_class_predictor.py  glycan_class_predictor_v2.py  glycan_class_predictor_v3.py  glycan_composition_predictor.py  glycan_prediction_pipeline.py  glycan_retrieval_model.py  glycan_retrieval_v2.py  glycan_retrieval_v3.py  glycan_retrieval_v4.py  glycan_retrieval_v5_cascaded.py  glycan_retrieval_v6_site.py  glycan_retrieval_v6b_nlinked.py  glycosylation_genes.py  label_data_audit.py  map_glycanml_immunogenicity.py  nlinked_site_predictor.py  nlinked_site_predictor_v2.py  nlinked_site_predictor_v3.py  nlinked_site_predictor_v4.py  nlinked_site_predictor_v5.py  pathway_glycan_predictor.py  per_relation_eval.py  (+6 more)
shiny_app/: Dockerfile  app.R  docker-compose.yml  global.R
tests/: __init__.py  conftest.py  test_binding_site_task.py  test_biohgt.py  test_biohgt_numerical.py  test_build_kg.py  test_celltype_conditioned.py  test_cmca_loss.py  test_compgcn_rel.py  test_composite_loss.py  test_converter.py  test_cross_modal_fusion.py  test_dataset.py  test_disease_association_task.py  test_downstream_framework.py  test_drug_target_task.py  test_evaluation.py  test_glycan_encoder.py  test_glycan_function_task.py  test_glycan_protein_task.py  test_glycan_tree_encoder.py  test_glyco_kg_net.py  test_glyco_metrics.py  test_glycobiology_validity.py  test_glytoucan_parser.py  test_graph_level_decoder.py  (+37 more)
(+191 files in other folders)
